--- a/lazy-ui/src/assets/styles/lazy.scss
+++ b/lazy-ui/src/assets/styles/lazy.scss
@@ -170,6 +170,10 @@
 .el-card__header {
 	padding: 14px 15px 7px;
 	min-height: 40px;
+	position: fixed;
+	background: #e6ebf5;
+	width: 39%;
+	top:0;
 }
 
 .el-card__body {
